# Doctor_Script

./: .gitignore  README.md  audio_recognizer.py  config.py  main.py  pyproject.toml  requirements.txt
adapters/tinkoff/: auth.py  voicekit.py
adapters/tinkoff/stt/v1/: stt_pb2.py  stt_pb2_grpc.py
adapters/vk/: cloud.py
adapters/yandex/: speach_kit.py
